# search-mcp

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: main.rs  server.rs  types.rs
src/backends/: brave.rs  duckduckgo.rs  exa.rs  mod.rs  searxng.rs  tavily.rs
src/cache/: mod.rs
src/fusion/: mod.rs
