[package]
name = "search-mcp"
version = "0.1.0"
edition = "2021"
description = "Rust MCP server for AI-native web search. Aggregates multiple search backends with caching, cost-aware routing, and result fusion."
authors = ["pdaxt"]
license = "MIT"
repository = "https://github.com/pdaxt/search-mcp"
readme = "README.md"
keywords = ["mcp", "search", "ai", "rust", "searxng"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "search-mcp"
path = "src/main.rs"

[dependencies]
# MCP server
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cache
dashmap = "6"
rusqlite = { version = "0.32", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async trait for backend abstraction
async-trait = "0.1"

# URL encoding
urlencoding = "2"

# JSON Schema (required by rmcp Parameters)
schemars = "1.0"

# Utilities
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
thiserror = "2"
anyhow = "1"

[profile.release]
lto = true
strip = true
opt-level = "z"
